hphp/test/quick/hh_typehint1.php.expectf
HipHop Warning: Argument 1 to foo() must be of type ?Bar, Foo given in %s on line 10
HipHop Fatal error: Call to undefined method Foo::frob from anonymous context in %s on line 8
